--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@ nav {
     display: flex;
 }
 
+img{
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px ;
+}
+
 .nav__container {
     width: 100%;
     max-width: 1200px;
@@ -21,6 +28,10 @@ nav {
     align-items: center;
     margin: 0 auto;
 
+}
+
+.red{
+    color: #F67280;
 }
 
 .logo{
@@ -56,3 +67,64 @@ li {
 .nav__link--primary:hover {
     text-decoration: none;
 }
+
+#landing {
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+header {
+    height: calc(100vh - 80px);
+}
+
+.header__container{
+    padding: 24px;
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    font-size: 56px;
+    color: #F67280;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+h2{
+    font-size: 32px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:active{
+    transform: translateY(1px);
+}
+
+.btn {
+    background-color:#F67280;
+    color: white;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+    max-width: 200px;
+}
+
+.header__img--wrapper{
+    padding: 20px;
+}
+
