adding highlight section

--- a/styles.css
+++ b/styles.css
@@ -128,3 +128,18 @@ button:active{
     padding: 20px;
 }
 
+/* 
+
+Highlights
+
+*/
+
+.container {
+    padding: 56px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
