--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -18,6 +23,21 @@ img{
     max-height: 50vh;
     padding: 20px ;
 }
+
+p {
+    line-height: 1.5;
+}
+
+.container {
+    padding: 56px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 
 .nav__container {
     width: 100%;
@@ -126,6 +146,7 @@ button:active{
 
 .header__img--wrapper{
     padding: 20px;
+    z-index: 2;
 }
 
 /* 
@@ -134,12 +155,82 @@ Highlights
 
 */
 
-.container {
-    padding: 56px 0;
+#highlights {
+    position: relative;
 }
 
-.row {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+#highlights:before {
+    background: url('./assets/wave.svg');
+    content:"";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    top: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+#highlights:after {
+    background: url('./assets/wave.svg');
+    content:"";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    bottom: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(100%) rotate(180deg);
+}
+
+.highlight__wrapper{
+    display: flex;
+}
+
+.highlight {
+    padding: 0 24px;
+    width: calc(100%/3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.highlight__para {
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img {
+    border: 2px solid #f6727f45;
+    color: #F67280;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom: 24px;
+}
+
+.highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+
+}
+
+/*
+
+FEATURES
+
+*/
+
+#features{
+    height: 1000px;
+    background-color: rgba(115, 66, 214, 0.1);
 }
