--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,9 @@ FEATURES
 
 .book__img{
     max-height: 380px;
+    padding: 0;
     transition: all 300ms ease;
+    cursor: no-drop;
 }
 
 .book__img--wrapper {
@@ -261,4 +263,25 @@ FEATURES
 
 .book:hover .book__img {
     transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
 }
