--- a/styles.css
+++ b/styles.css
@@ -286,3 +286,30 @@ FEATURES
     padding-right: 6px;
     color: #bfbfbf;
 }
+
+/*
+
+Explore
+
+*/
+
+
+#explore{
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+.row__column{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.explore__button{
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    cursor: pointer;
+}
