--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     max-width: 100vw;
     overflow-x: hidden;
@@ -26,6 +30,14 @@ img{
 
 p {
     line-height: 1.5;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 .container {
@@ -325,6 +337,10 @@ footer{
     background-color: #242424;
 }
 
+.footer__logo {
+    display: flex;
+}
+
 .footer__logo--img {
     width: 160px;
     filter: grayscale(1) invert(1);
@@ -333,4 +349,14 @@ footer{
 .footer__link,
 .footer__copyright {
     color: #fff;
+}
+
+.footer__list {
+    margin: 24px 0 24px 0;
+
+}
+
+
+.footer__link{
+    padding: 0 8px;
 }
