--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,56 @@ li {
     text-decoration: none;
 }
 
+.btn__menu {
+    background-color: transparent;
+    border: none;
+    font-size: 40px;
+    text-align: center;
+    color: #F67280;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} 
+
+.menu__list {
+    padding: 32px 0;
+}
+
+
+.menu__link{
+    color: white;
+    font-size: 40px;
+}
+
+/*
+Landing
+*/
+
+
 #landing {
     background-color: rgba(115, 66, 214, 0.1);
 }
@@ -360,3 +410,5 @@ footer{
 .footer__link{
     padding: 0 8px;
 }
+
+
