--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ li {
     font-size: 40px;
     text-align: center;
     color: #F67280;
+    display: none;
 }
 
 .menu__backdrop {
@@ -119,6 +120,19 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop{    
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
 }
 
 .btn__menu--close {
@@ -412,3 +426,12 @@ footer{
 }
 
 
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+}
