media queries added

--- a/styles.css
+++ b/styles.css
@@ -271,13 +271,13 @@ Highlights
 
 .highlight__wrapper{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
     padding: 0 24px;
     width: calc(100%/3);
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
@@ -303,6 +303,7 @@ Highlights
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
 
 }
 
@@ -425,6 +426,29 @@ footer{
     padding: 0 8px;
 }
 
+@media (max-width:768px) {
+    .header__description {
+        padding: 0 24;
+
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 26;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+    .book {
+        width: 50%;
+    }
+}
+
 
 @media (max-width: 550px) {
     .nav__links {
@@ -434,4 +458,14 @@ footer{
     .btn__menu {
         display: block;
     }
+
+    .highlight{
+        width: 100%;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+
 }
